feat: api docs adjustment, and schema fix
