# app/Http/Controllers/API/InventarisAPIController.php
@@ -35,6 +35,36 @@ class InventarisAPIController extends AppBaseController
      *      summary="getInventarisList",
      *      tags={"Inventaris"},
      *      description="Get all Inventaris",
+     *      @OA\Parameter(
+     *          name="skip",
+     *          in="query",
+     *          description="skip",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int32"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="limit",
+     *          in="query",
+     *          description="limit",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int32"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="search",
+     *          in="query",
+     *          description="search",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *              format="int32"
+     *          )
+     *      ),
      *      @OA\Response(
      *          response=200,
      *          description="successful operation",
